name:                LogFS
version:             0.1.0.0
synopsis:            Centralized logging via logfs
description:         Centralized logging via logfs
homepage:            https://github.com/adarqui/LogFS-hs
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

source-repository head
 type: git
 location: https://github.com/adarqui/LogFS-hs

library
  exposed-modules:
   System.LogFS
   System.LogFS.Run
   System.LogFS.Internal
--   System.LogFS.Exception
  build-depends:       base ==4.7.*, HUnit ==1.2.5.*, hedis ==0.6.5, bytestring, transformers ==0.4.1.*, unix ==2.7.0.1, HFuse, devutils
  GHC-Options:         -O3 -Wall
  hs-source-dirs:      src

executable "logfs"
  main-is:             LogFS.hs
  build-depends:       base ==4.7.*, HUnit ==1.2.5.*, hedis ==0.6.5, bytestring, transformers == 0.4.1.*, HFuse, LogFS, devutils
  GHC-Options:         -O3 -Wall -threaded -rtsopts
